# setup.cfg for the XSort application wheel. To build, open Terminal and cd to the project directory .../xsort,
# then run venv3.9/bin/python -m build

[metadata]
name = XSort
author = Scott A. Ruffner
author_email = sruffner@srscicomp.com
version = 0.0.0
description = Python Qt application for visualing and editing spike sorter results
long_description = file: dist/README.md, dist/CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    PySide6 == 6.5.2
    PySide6-Addons == 6.5.2
    PySide6-Essentials == 6.5.2
    shiboken6 == 6.5.2

[options.packages.find]
where = src

[options.package_data]
xsort.assets =
    *.png
