# setup.cfg for the XSort application wheel. To build, open Terminal and cd to the project directory .../xsdev,
# then run venv/bin/python -m build

[metadata]
name = XSort
author = Scott A. Ruffner
author_email = sruffner@srscicomp.com
version = 0.1.2
description = Python Qt application for visualing and editing spike sorter results
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.11
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = False
packages =
    xsort
    xsort.data
    xsort.views
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy == 1.25.2
    pyqtgraph == 0.13.3
    PySide6 == 6.5.2
    scipy == 1.11.2

[options.package_data]
xsort =
    assets/*.md
